# arcane

./: BUILD.bazel  Makefile  README.md  WORKSPACE  database.yml  deps.bzl  go.mod  go.sum  skaffold.yaml
cloud/charts/arcane/: Chart.yaml  values.yaml
cloud/charts/arcane/templates/: deployment.yaml
cmd/arcane/: BUILD.bazel  main.go
cmd/cli/: BUILD.bazel  main.go  status.go
cmd/cli/kv/: BUILD.bazel  kv.go
cmd/cli/status/: BUILD.bazel  status.go
pkg/arcanepb/: BUILD.bazel  arcane.pb.go  arcane.proto  arcane_grpc.pb.go
pkg/database/: BUILD.bazel  db.go
pkg/database/migrations/: 20211127084448_base.up.sql
pkg/models/: BUILD.bazel  kv.go
server/: BUILD.bazel  server.go
web/: package-lock.json  package.json  tailwind.config.js
web/src/routes/: +page.svelte
