load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "arcane_lib",
    srcs = ["main.go"],
    importpath = "github.com/kzh/arcane/cmd/arcane",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/arcanepb",
        "//server",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "arcane",
    embed = [":arcane_lib"],
    visibility = ["//visibility:public"],
)
