load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "arcane_lib",
    srcs = ["main.go"],
    importpath = "github.com/kzh/arcane/cmd/arcane",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/arcanepb",
        "//server",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "arcane",
    embed = [":arcane_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    cmd = "arcane",
    files = [":arcane"],
)

container_push(
    name = "image-push",
    format = "Docker",
    image = ":image",
    registry = "ghcr.io",
    repository = "kzh/arcane",
)
