load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = ["db.go"],
    embedsrcs = ["migrations"],
    importpath = "github.com/kzh/arcane/pkg/database",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gobuffalo_pop_v6//:pop",
        "@org_uber_go_zap//:zap",
    ],
)

alias(
    name = "go_default_library",
    actual = ":database",
    visibility = ["//visibility:public"],
)
