load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = ["kv.go"],
    importpath = "github.com/kzh/arcane/pkg/models",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gobuffalo_pop_v6//:pop",
        "@com_github_gofrs_uuid//:uuid",
    ],
)

alias(
    name = "go_default_library",
    actual = ":models",
    visibility = ["//visibility:public"],
)
